--- a/login.html
+++ b/login.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TASKTOPIA</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
   </head>
   <body>
-	<script src="index.js"></script>
+	<script src="login.js"></script>
+	
   </body>
 </html>
