--- a/login.html
+++ b/login.html
@@ -9,6 +9,13 @@
   </head>
   <body>
 	<script src="login.js"></script>
-	
+	<h1>TASKTOPIA</h1>
+	<button type="button">login</button>
+	<button type="button">sign up</button>
+	<button type="button">teacher login</button>
+	<button type="button">teacher sign up</button>
+	<button type="button">parent login</button>
+	<button type="button">parent sign up</button>
+	<button type="button">about</button>
   </body>
 </html>
