add classes to buttons for css

--- a/login.html
+++ b/login.html
@@ -10,12 +10,12 @@
   <body>
 	<script src="login.js"></script>
 	<h1>TASKTOPIA</h1>
-	<button type="button">login</button>
-	<button type="button">sign up</button>
-	<button type="button">teacher login</button>
-	<button type="button">teacher sign up</button>
-	<button type="button">parent login</button>
-	<button type="button">parent sign up</button>
-	<button type="button">about</button>
+	<button class="login">login</button>
+	<button class="signup">sign up</button>
+	<button class="teachlog">teacher login</button>
+	<button class="teachsign">teacher sign up</button>
+	<button class="parlog">parent login</button>
+	<button class="parsign">parent sign up</button>
+	<button class="about">about</button>
   </body>
 </html>
