Update login, make login work Moved all login files to their own folder for organization Put all login buttons into a div and made another div for the inputs Added code in login.js to login and signup users. Once logged/signed in, users will be redirected to index.html Also changed index.html and main.js to redirect to login page if user is not logged in. (currently no differentiation between kid, parent, teacher accounts, and no info is stored about the accounts.) Will do that next.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <script src="/main.js"></script>
+    <script src="/main.js" type="module"></script>
     <script>
       if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js', { scope: '/' });
