--- a/login/login.html
+++ b/login/login.html
@@ -20,11 +20,15 @@
 		<button class="parsign" onclick="signup('parent')">parent sign up</button>	
 	</div>
 	<div id="credentials">
-		<label for="email">Email</label>
-		<input id="email" type="email" />
-		
-		<label for="password">Password</label>
-		<input id="password" type="password" />
+		<div id="email">
+			<label for="email">Email</label>
+			<input type="email" />
+		</div>
+
+		<div id="password">
+			<label for="password">Password</label>
+			<input type="password" />
+		</div>
 
 		<button id="submit" onclick="submit()">Submit</button>
 	</div>
