Connected Accounts to database and stores type now when accounts are created, a new document will be made in the database for them. This will store all the account info. For now, it only stores the account type. When logging into an account, if the account's type is different from currently logging in, it will tell you and won't let you.

--- a/login/login.html
+++ b/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="login.css">
-	<script src="login.js" type="module" ></script>
+	<script src="/login/login.js" type="module" ></script>
   
 </head>
   <body>
@@ -22,12 +22,12 @@
 	<div id="credentials">
 		<div id="email">
 			<label for="email">Email</label>
-			<input type="email" />
+			<input id="emailInput" type="email" />
 		</div>
 
 		<div id="password">
 			<label for="password">Password</label>
-			<input type="password" />
+			<input id="passwordInput" type="password" />
 		</div>
 
 		<button id="submit" onclick="submit()">Submit</button>
