add name input when making acc

--- a/login/login.html
+++ b/login/login.html
@@ -20,13 +20,19 @@
 		<button class="parsign" onclick="signup('parent')">parent sign up</button>	
 	</div>
 	<div id="credentials">
+
+		<div id="name">
+			<label for="nameInput">Name</label>
+			<input id="nameInput" type="text" />
+		</div>
+
 		<div id="email">
-			<label for="email">Email</label>
+			<label for="emailInput">Email</label>
 			<input id="emailInput" type="email" />
 		</div>
 
 		<div id="password">
-			<label for="password">Password</label>
+			<label for="passwordInput">Password</label>
 			<input id="passwordInput" type="password" />
 		</div>
 
