specify acc type when inputting name

--- a/login/login.html
+++ b/login/login.html
@@ -22,7 +22,7 @@
 	<div id="credentials">
 
 		<div id="name">
-			<label for="nameInput">Name</label>
+			<label id="nameInputLabel" for="nameInput">Name</label>
 			<input id="nameInput" type="text" />
 		</div>
 
