--- a/login/login.html
+++ b/login/login.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="login.css">
-	<script src="/login/login.js" type="module" ></script>
-  
+	<script src="login.js" type="module" ></script> 
 </head>
-  <body>
-
-
-
+	<body>
 	<h1>TASKTOPIA</h1>
 	<div id="buttons">
 		<button class="teachlog" onclick="login('teacher')">teacher login</button>
@@ -22,18 +18,18 @@
 	<div id="credentials">
 
 		<div id="name">
-			<label id="nameInputLabel" for="nameInput">Name</label>
-			<input id="nameInput" type="text" />
+			<label for="name" for="nameInput">Name</label>
+			<input type="text" />
 		</div>
 
 		<div id="email">
-			<label for="emailInput">Email</label>
-			<input id="emailInput" type="email" />
+			<label for="email">Email</label>
+			<input type="email" />
 		</div>
 
 		<div id="password">
-			<label for="passwordInput">Password</label>
-			<input id="passwordInput" type="password" />
+			<label for="password">Password</label>
+			<input type="password" />
 		</div>
 
 		<button id="submit" onclick="submit()">Submit</button>
