--- a/index.html
+++ b/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="manifest" href="/manifest.json" />
-
-  </head>
-  <body>
-    
-
-    <div id="topbar">
-      <div class="baricon" id="tasks">
-        <p style="font-size: xx-large;">Tasks</p>
-      </div>
-    </div>
-
-    <script src="/main.js" type="module"></script>
-    <script>
-      if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js', { scope: '/' });
-      }
-    </script>
-
-  </body>
+<html>
+<head>
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet"/>
+  <script src="script.js"></script>
+</head>
+<body>
+  <h1>MENU</h1>
+  <button id="avatar">Avatar editor</button>
+  <button id="base">Base editor</button>
+  <button id="quiz">Quiz bowl</button>
+  <button id="contest">Base contests</button>
+  <button id="tasks">View tasks</button>
+</body>
 </html>
- 
