--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
   <h1>MENU</h1>
-  <button id="avatar">Avatar editor</button>
-  <button id="base">Base editor</button>
-  <button id="quiz">Quiz bowl</button>
-  <button id="contest">Base contests</button>
-  <button id="tasks">View tasks</button>
+  <div id="buttons">
+    <button id="avatar">Avatar editor</button>
+    <button id="base">Base editor</button>
+    <button id="quiz">Quiz bowl</button>
+    <button id="contest">Base contests</button>
+    <button id="tasks">View tasks</button>
+  </div>
 </body>
 </html>
