--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <title>replit</title>
   <link href="style.css" rel="stylesheet"/>
-  <script src="script.js"></script>
+  <script src="main.js", type="module"></script>
+  <link rel="manifest" href="/manifest.json" />
+
 </head>
 <body>
+  
   <h1>MENU</h1>
   <div id="buttons">
     <button id="avatar">Avatar editor</button>
@@ -14,5 +17,11 @@
     <button id="contest">Base contests</button>
     <button id="tasks">View tasks</button>
   </div>
+
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js', { scope: '/' });
+    }
+  </script>
 </body>
 </html>
