--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>replit</title>
   <link href="style.css" rel="stylesheet"/>
-  <script src="main.js", type="module"></script>
+  <script src="main.js" type="module"></script>
   <link rel="manifest" href="/manifest.json" />
 
 </head>
