--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <title>replit</title>
   <link href="style.css" rel="stylesheet"/>
-  <script src="main.js" type="module"></script>
-  <link rel="manifest" href="/manifest.json" />
-
+  <script src="script.js"></script>
 </head>
 <body>
-  
   <h1>MENU</h1>
   <div id="buttons">
     <button id="avatar">Avatar editor</button>
@@ -16,7 +13,9 @@
     <button id="quiz">Quiz bowl</button>
     <button id="contest">Base contests</button>
     <button id="tasks">View tasks</button>
+    <button id="settings">Settings</button>
   </div>
+</body>
 
   <script>
     if('serviceWorker' in navigator) {
