--- a/QuizBowl.html
+++ b/QuizBowl.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="script.js"></script>
+  <link href="QuizBowl.css" rel="stylesheet" type="text/css" />
+  <script src="QuizBowl.js"></script>
 </head>
 <body>
-  <h1>Quiz Bowl</h1>
+  <h1 id="top">Quiz Bowl</h1>
   <div id="lobby">
-    <button class="button" id="enter">launch game</button>
+    <button class="button" id="enter" onclick="startGame()">launch game</button>
     <div id="players">
-      <label># of players</label>
+      <label># of players: </label>
       <label>3</label>
     </div>
     <button id="leave">
       <img src="red.png" alt="leave" height="40%" width="90%"/>
     </button>
+  </div>
+  <div id="game">
+    <button class="button" id="i1">option</button>
+    <button class="button" id="i2">option</button>
+    <button class="button" id="i3">option</button>
+    <button class="button" id="i4">option</button>
   </div>
 </body>
 </html>
