--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button id="contest">Base contests</button>
     <button id="tasks">View tasks</button>
     <button id="settings">Settings</button>
+    <button id="draw">Draw</button>
   </div>
 
   <script>
