Add some quizbowl game functionality

--- a/quizbowl/QuizBowl.html
+++ b/quizbowl/QuizBowl.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href="QuizBowl.css" rel="stylesheet" type="text/css" />
-  <script src="QuizBowl.js"></script>
+  <script src="QuizBowl.js" type="module"></script>
 </head>
 <body>
   <h1 id="top">Quiz Bowl</h1>
