fix and add leave button, fix some quizbowl stuff

--- a/quizbowl/QuizBowl.html
+++ b/quizbowl/QuizBowl.html
@@ -10,9 +10,9 @@
     <button class="button" id="enter" onclick="startGame()">launch game</button>
     <div id="players">
       <label># of players: </label>
-      <label>3</label>
+      <label id="playerCount">3</label>
     </div>
-    <button id="leave">
+    <button id="leave" onclick="leave()">
       <img src="red.png" alt="leave" height="40%" width="90%"/>
     </button>
   </div>
