add quizbowl end screen, points not yet

--- a/quizbowl/QuizBowl.html
+++ b/quizbowl/QuizBowl.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1 id="top">Quiz Bowl</h1>
+  <ol id="winners"></ol>
   <div id="lobby">
     <button class="button" id="enter" onclick="startGame()">launch game</button>
     <div id="players">
