--- a/tasks.html
+++ b/tasks.html
@@ -114,5 +114,8 @@
       <button onclick="showTask()" id="view">view</button>
     </div>
   </div>
+  <div id="description">
+    <p>Task description</p>
+  </div>
 </body>
 </html>
