--- a/login/login.html
+++ b/login/login.html
@@ -7,9 +7,7 @@
 	<body>
 	<h1>TASKTOPIA</h1>
 	<div id="buttons">
-		<button class="teachlog" onclick="login('teacher')">teacher login</button>
 		<button class="login" onclick="login('kid')">login</button>
-		<button class="teachsign" onclick="signup('teacher')">teacher sign up</button>
 		<button class="signup" onclick="signup('kid')">sign up</button>
 		<button class="parlog" onclick="login('parent')">parent login</button>
 		<button class="about">about</button>
@@ -18,18 +16,18 @@
 	<div id="credentials">
 
 		<div id="name">
-			<label for="name" id="nameInputLabel">Name</label>
-			<input type="text" id="nameInput"/>
+			<label for="name" for="nameInput">Name</label>
+			<input type="text" />
 		</div>
 
 		<div id="email">
 			<label for="email">Email</label>
-			<input type="email" id="emailInput"/>
+			<input type="email" />
 		</div>
 
 		<div id="password">
 			<label for="password">Password</label>
-			<input type="password" id="passwordInput"/>
+			<input type="password" />
 		</div>
 
 		<button id="submit" onclick="submit()">Submit</button>
