--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <button id="settings">Settings</button>
     <button id="draw">Draw</button>
   </div>
+  <div id="parent">
+    <button id="list">Edit Tasks</button>
+    <button id="questions">Edit Questions</button>
+  </div>
 
   <script>
     if('serviceWorker' in navigator) {
