--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button id="tasks">View tasks</button>
     <button id="settings">Settings</button>
     <button id="draw">Draw</button>
+    <button id="shop">Shop</button>    
   </div>
   <div id="parent">
     <button id="list">Edit Tasks</button>
