--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -17,21 +17,29 @@
       <label>name</label>
       <br>
       <label>price</label>
+      <br>
+      <button>buy</button>
     </div>
     <div>
       <label>name</label>
       <br>
       <label>price</label>
+      <br>
+      <button>buy</button>
     </div>
     <div>
       <label>name</label>
       <br>
       <label>price</label>
+      <br>
+      <button>buy</button>
     </div>
     <div>
       <label>name</label>
       <br>
       <label>price</label>
+      <br>
+      <button>buy</button>
     </div>
   </div>
 </body>
