--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="script.js"></script>
+  <link href="shop.css" rel="stylesheet" type="text/css" />
+  <script src="chop.js"></script>
 </head>
 <body>
   <div id="top">
