--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href="shop.css" rel="stylesheet" type="text/css" />
-  <script src="chop.js"></script>
+  <script src="shop.js"></script>
 </head>
 <body>
   <div id="top">
