--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="tasks.css" />
+  <script src="tasks.js"></script>
 </head>
 <body>
   <div id="top">
