update main page, add logout button, add parent ID

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="manifest" href="/manifest.json" />
 </head>
 <body>
+  <button id="logout">Log out</button>
   <h1>MENU</h1>
   <div id="buttons">
     <button id="avatar">Avatar editor</button>
@@ -21,6 +22,7 @@
   <div id="parent">
     <button id="list">Edit Tasks</button>
     <button id="questions">Edit Questions</button>
+    <p id="parentId">Your Parent ID is: <span id="parentIdCode">12345</span></p>
   </div>
 
   <script>
