--- a/login/login.html
+++ b/login/login.html
@@ -16,18 +16,18 @@
 	<div id="credentials">
 
 		<div id="name">
-			<label for="name" for="nameInput">Name</label>
-			<input type="text" />
+			<label for="nameInput" id="nameInputLabel">Name</label>
+			<input type="text" id="nameInput"/>
 		</div>
 
 		<div id="email">
-			<label for="email">Email</label>
-			<input type="email" />
+			<label for="emailInput" id="emailInputLabel">Email</label>
+			<input type="email" id="emailInput"/>
 		</div>
 
 		<div id="password">
-			<label for="password">Password</label>
-			<input type="password" />
+			<label for="passwordInput" id="passwordInputLabel">Password</label>
+			<input type="password" id="passwordInput"/>
 		</div>
 
 		<button id="submit" onclick="submit()">Submit</button>
