connect and format pages

--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -5,6 +5,7 @@
   <script src="shop.js"></script>
 </head>
 <body>
+  <button id="backButton" style="position: absolute;left:10px;right:10px;font-size:350%;width:fit-content" onclick="window.location.href = '../index.html'">Back</button>
   <div id="top">
     <h1>Shop</h1>
     <div id="coins">
