--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="top">
-    <button id="leave">
+    <button id="leave" onclick="window.location.href='../index.html'">
       <img src="red.png" alt="leave" height="40%" width="90%"/>
     </button>
     <h1 id="heading">Tasks</h1>
