--- a/settings/settings.html
+++ b/settings/settings.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link href="settings.css" rel="stylesheet" type="text/css" />
+  <script src="settings.js"></script>
+</head>
+
+<body>
+  <h1>Settings</h1>
+  <div class="settings">
+    <div class="sound">
+      <label>sound effects</label>
+      <input type="checkbox">
+    </div>
+    <div class="music">
+      <label>music</label>
+      <input type="checkbox">
+    </div>
+    <div class="volume">
+      <label>volume</label>
+      <input type="range" min="0" max="100">
+    </div>
+  </div>
+</body>
+</html>
 
