--- a/settings/settings.html
+++ b/settings/settings.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <button id="backButton" style="position: absolute;left:10px;right:10px;font-size:350%;width:fit-content" onclick="window.location.href = '../index.html'">Back</button>
   <h1>Settings</h1>
   <div class="settings">
     <div class="sound">
