allow connecting kid to parent accounts

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <button id="contest">Base contests</button>
     <button id="tasks">View tasks</button>
     <button id="settings">Settings</button>
-    <button id="draw">Draw</button>
-    <button id="shop">Shop</button>    
+    <button id="connect">Connect Parent Account</button>
+    <button id="shop">Shop</button>
   </div>
   <div id="parent">
     <button id="list">Edit Tasks</button>
