allow parent to add tasks

--- a/tasksParent/tasks.html
+++ b/tasksParent/tasks.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="tasks.css" />
-  <script src="tasks.js"></script>
+  <script src="tasks.js" type="module"></script>
 </head>
 <body>
   <div id="top">
@@ -27,7 +27,7 @@
 
   <label for="taskName">Task Name: </label><input id="taskName" type="text" />
   <br>
-  <label for="taskTime">Task Time: </label><input id="taskName" type="time" />
+  <label for="taskTime">Task Time: </label><input id="taskTime" type="time" />
   <br>
   <button id="addTask">Add Task</button>
 </body>
