lets parents add coins to kid account

--- a/tasksParent/tasks.html
+++ b/tasksParent/tasks.html
@@ -30,5 +30,14 @@
   <label for="taskTime">Task Time: </label><input id="taskTime" type="time" />
   <br>
   <button id="addTask">Add Task</button>
+
+  <hr>
+
+  <h2>Give Coins</h2>
+
+  <label for="coinCount">Amount: </label><input id="coinCount" type="number" />
+  <br>
+  <button id="addCoins">Add Coins</button>
+
 </body>
 </html>
