show image in shop catalog + updated catalog

--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -21,6 +21,8 @@
   <div id="itemTemplate" class="items">
     <label>name</label>
     <br>
+    <img />
+    <br>
     <label>price</label>
     <br>
     <button>buy</button>
