--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <h1>MENU</h1>
   <div id="buttons">
     <button id="avatar">Avatar editor</button>
-    <button id="base">Base editor</button>
     <button id="quiz">Quiz bowl</button>
-    <button id="contest">Base contests</button>
     <button id="tasks">View tasks</button>
     <button id="settings">Settings</button>
     <button id="connect">Connect Parent Account</button>
@@ -21,6 +19,7 @@
   </div>
   <div id="parent">
     <button id="list">Edit Tasks</button>
+    <button id="questions">Edit Questions</button>
     <p id="parentId">Your Parent ID is: <span id="parentIdCode">12345</span></p>
   </div>
 
